--- a/.github/workflows/spacelift-stack.yml
+++ b/.github/workflows/spacelift-stack.yml
@@ -1,4 +1,4 @@
-name: Spacelift Stack
+name: Spacelift Stacks
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ on:
 jobs:
   manage-stacks:
     runs-on: ubuntu-latest
-    name: Create Stack
+    name: Manage Stacks
     steps:
       - uses: actions/checkout@v4
 
@@ -21,15 +21,28 @@ jobs:
             **/terraform.tf
 
       - run: |
+          jwt=$(spacectl profile export-token)
+          echo "JWT=$jwt" >> "$GITHUB_OUTPUT"
+        id: spacelift
+        env:
+          SPACELIFT_API_KEY_ENDPOINT: https://omicron7.app.spacelift.io
+          SPACELIFT_API_KEY_ID: ${{ secrets.SPACELIFT_API_KEY_ID }}
+          SPACELIFT_API_KEY_SECRET: ${{ secrets.SPACELIFT_API_KEY_SECRET }}
+
+      - run: |
           for file in ${ADDED_FILES}; do
             echo "$file was added"
+            name=$(dirname $file)
           done
+
+          curl --request POST \
+            --url $SPACELIFT_API_KEY_ENDPOINT/graphql \
+            --header 'Authorization: Bearer $SPACELIFT_JWT' \
+            --header 'Content-Type: application/json' \
+            --data '{"query":"{ stacks { id name, administrative, createdAt, description }}"}'
         env:
           ADDED_FILES: ${{ steps.changed-files.outputs.added_files }}
-
-#    - name: Deploy infrastructure
-#      env:
-#        SPACELIFT_API_KEY_ENDPOINT: https://mycorp.app.spacelift.io
-#        SPACELIFT_API_KEY_ID: ${{ secrets.SPACELIFT_API_KEY_ID }}
-#        SPACELIFT_API_KEY_SECRET: ${{ secrets.SPACELIFT_API_KEY_SECRET }}
-#      run: spacectl stack deploy --id my-infra-stack
+          SPACELIFT_API_KEY_ENDPOINT: https://mycorp.app.spacelift.io
+          SPACELIFT_API_KEY_ID: ${{ secrets.SPACELIFT_API_KEY_ID }}
+          SPACELIFT_API_KEY_SECRET: ${{ secrets.SPACELIFT_API_KEY_SECRET }}
+          SPACELIFT_JWT: ${{ steps.spacelift.outputs.JWT }}
