Hardcode name for testing

--- a/.github/workflows/spacelift-stack.yml
+++ b/.github/workflows/spacelift-stack.yml
@@ -66,6 +66,6 @@ jobs:
                   ) { id }
                 }",
                 "operationName":"StackCreate",
-                "variables":"{\"name\": \"'$name'\"}"
+                "variables":"{\"name\": \"testing\"}"
               }' | jq -r '.data.stackCreate.id')
           done
