single line GraphQL

--- a/.github/workflows/spacelift-stack.yml
+++ b/.github/workflows/spacelift-stack.yml
@@ -51,20 +51,7 @@ jobs:
               --header 'Authorization: Bearer ${{ steps.login.outputs.token }})' \
               --header 'Content-Type: application/json' \
               --data '{
-                "query":"mutation StackCreate($name: String!) {
-                  stackCreate(
-                    input: {
-                      name: $name
-                      administrative: false
-                      autodeploy: false
-                      repository: "terraform"
-                      branch: "main"
-                      labels: ["nobackend"]
-                      space: "omicron7-01HS1TBZCJ35FSNJ9AC9QTY7WF"
-                    }
-                    manageState: false
-                  ) { id }
-                }",
+                "query":"mutation StackCreate($name: String!) { stackCreate( input: { name: $name, administrative: false, autodeploy: false, repository: "terraform", branch: "main", labels: ["nobackend"], space: "omicron7-01HS1TBZCJ35FSNJ9AC9QTY7WF" }, manageState: false) { id } }",
                 "operationName":"StackCreate",
                 "variables":"{"name": "'$name'"}"
               }';
