--- a/.github/workflows/spacelift-stack.yml
+++ b/.github/workflows/spacelift-stack.yml
@@ -53,6 +53,6 @@ jobs:
               --data '{
                 "query":"mutation StackCreate($name: String!) { stackCreate( input: { name: $name, administrative: false, autodeploy: false, repository: \"terraform\", branch: \"main\", labels: [\"nobackend\"], space: \"omicron7-01HS1TBZCJ35FSNJ9AC9QTY7WF\" }, manageState: false) { id } }",
                 "operationName":"StackCreate",
-                "variables":"{"name": "'$name'"}"
+                "variables":"{\"name\": \"'$name'\"}"
               }';
           done
