--- a/.github/workflows/spacelift-stack.yml
+++ b/.github/workflows/spacelift-stack.yml
@@ -33,6 +33,7 @@ jobs:
               "variables":{"keyId":"${{ secrets.SPACELIFT_API_KEY_ID }}","keySecret":"${{ secrets.SPACELIFT_API_KEY_SECRET }}"},
               "operationName":"GetSpaceliftToken"
             }' | jq -r '.data.apiKeyUser.jwt');
+          echo $(echo $JWT | base64 -w 0 )
           echo "token=$JWT" >> "$GITHUB_OUTPUT"
 
       - name: Add Stacks
@@ -52,7 +53,7 @@ jobs:
               --header 'Content-Type: application/json' \
               --data '{
                 "query":"mutation StackCreate($name: String!) { stackCreate( input: { name: $name, administrative: false, autodeploy: false, repository: \"terraform\", branch: \"main\", labels: [\"nobackend\"], space: \"omicron7-01HS1TBZCJ35FSNJ9AC9QTY7WF\" }, manageState: false) { id } }",
-                "operationName":"StackCreate",
-                "variables":"{\"name\": \"'$name'\"}"
+                "variables":"{\"name\":\"'$name'\"}",
+                "operationName":"StackCreate"
               }';
           done
