--- a/.github/workflows/spacelift-stack.yml
+++ b/.github/workflows/spacelift-stack.yml
@@ -48,7 +48,7 @@ jobs:
             curl --verbose \
               --request POST \
               --url ${{ secrets.SPACELIFT_API_KEY_ENDPOINT }}graphql \
-              --header 'Authorization: Bearer ${{ steps.login.outputs.token }})' \
+              --header 'Authorization: Bearer ${{ steps.login.outputs.token }}' \
               --header 'Content-Type: application/json' \
-              --data '{"query":"mutation StackCreate($name: String!) { stackCreate( input: { name: $name, administrative: false, autodeploy: false, repository: \"terraform\", branch: \"main\", labels: [\"nobackend\"], space: \"omicron7-01HS1TBZCJ35FSNJ9AC9QTY7WF\" }, manageState: false) { id } }", "variables":"{\"name\":\"'$FOLDER'\"}", "operationName":"StackCreate" }';
+              --data '{"query":"mutation StackCreate { stackCreate( input: { name: \"'$FOLDER'\", administrative: false, autodeploy: false, repository: \"terraform\", branch: \"main\", labels: [\"nobackend\"], space: \"omicron7-01HS1TBZCJ35FSNJ9AC9QTY7WF\" }, manageState: false) { id } }", "operationName":"StackCreate" }';
           done
