Add ansible-test resources.

--- a/.github/workflows/spacelift-stack.yml
+++ b/.github/workflows/spacelift-stack.yml
@@ -50,9 +50,14 @@ jobs:
               --url ${{ secrets.SPACELIFT_API_KEY_ENDPOINT }}graphql \
               --header 'Authorization: Bearer ${{ steps.login.outputs.token }}' \
               --header 'Content-Type: application/json' \
-              --data '{"query":"mutation StackCreate { stackCreate( input: { name: \"'$FOLDER'\", projectRoot: \"'$FOLDER'\", administrative: false, autodeploy: false, repository: \"terraform\", branch: \"main\", space: \"omicron7-01HS1TBZCJ35FSNJ9AC9QTY7WF\", labels: [\"nobackend\"] }, manageState: false) { id } }", "operationName":"StackCreate" }';)
+              --data '{"query":"mutation StackCreate { stackCreate( input: { name: \"'$FOLDER'\", projectRoot: \"'$FOLDER'\", administrative: false, autodeploy: false, repository: \"terraform\", branch: \"main\", space: \"omicron7-01HS1TBZCJ35FSNJ9AC9QTY7WF\", labels: [\"nobackend\", \"feature:add_plan_pr_comment\", \"ghenv:-\"] }, manageState: false) { id } }", "operationName":"StackCreate" }';)
             STACK_ID=$(echo -n "$RESPONSE" | jq -r '.data.stackCreate.id')
-            echo $STACK_ID
+            curl --silent \
+              --request POST \
+              --url ${{ secrets.SPACELIFT_API_KEY_ENDPOINT }}graphql \
+              --header 'Authorization: Bearer ${{ steps.login.outputs.token }}' \
+              --header 'Content-Type: application/json' \
+              --data '{"query":"mutation AttachIntegration { awsIntegrationAttach( id: \"01HQV4XANFANXQY4NS3HDNJSCN\", stack: \"'$STACK_ID'\", read: true, write: true ) { id } }", "operationName":"AttachIntegration" }';
             curl --silent \
               --request POST \
               --url ${{ secrets.SPACELIFT_API_KEY_ENDPOINT }}graphql \
