--- a/.github/workflows/spacelift-stack.yml
+++ b/.github/workflows/spacelift-stack.yml
@@ -50,7 +50,7 @@ jobs:
               --url ${{ secrets.SPACELIFT_API_KEY_ENDPOINT }}graphql \
               --header 'Authorization: Bearer ${{ steps.login.outputs.token }}' \
               --header 'Content-Type: application/json' \
-              --data '{"query":"mutation StackCreate { stackCreate( input: { name: \"'$FOLDER'\", projectRoot: \"'$FOLDER'\", administrative: false, autodeploy: false, repository: \"terraform\", branch: \"main\", space: \"omicron7-01HS1TBZCJ35FSNJ9AC9QTY7WF\", labels: [\"nobackend\", \"feature:add_plan_pr_comment\", \"ghenv:-\"] }, manageState: false) { id } }", "operationName":"StackCreate" }';)
+              --data '{"query":"mutation StackCreate { stackCreate( input: { name: \"'$FOLDER'\", projectRoot: \"'$FOLDER'\", administrative: true, autodeploy: false, repository: \"terraform\", branch: \"main\", space: \"omicron7-01HS1TBZCJ35FSNJ9AC9QTY7WF\", labels: [\"nobackend\", \"feature:add_plan_pr_comment\", \"terraform\"] }, manageState: false) { id } }", "operationName":"StackCreate" }';)
             STACK_ID=$(echo -n "$RESPONSE" | jq -r '.data.stackCreate.id')
             curl --silent \
               --request POST \
